--- a/.github/workflows/optimize_crafting.yml
+++ b/.github/workflows/optimize_crafting.yml
@@ -50,3 +50,12 @@ jobs:
         with:
           name: optimizer-results
           path: output/
+
+      - name: Commit and push summary file
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add scripts/best_worst_recipes.csv
+          git commit -m "Update best_worst_recipes.csv [skip ci]" || echo "No changes to commit"
+          git push
+
