--- a/.github/workflows/optimize_crafting.yml
+++ b/.github/workflows/optimize_crafting.yml
@@ -1,4 +1,4 @@
-name: Crafting Cost Optimization
+name: Crafting Cost Optimization and Generate index.json
 
 # Run workflow on push to main branch or manually
 on:
@@ -28,6 +28,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pandas
 
+      - name: Generate index.json
+        run: python generate_index_json.py
+
       - name: Run Craft Optimizer
         run: |
           mkdir -p output
@@ -56,6 +59,7 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add scripts/best_worst_recipes.csv
-          git commit -m "Update best_worst_recipes.csv [skip ci]" || echo "No changes to commit"
+          git add data/index.json
+          git commit -m "Update best_worst_recipes.csv and Update index.json [skip ci]" || echo "No changes to commit"
           git push
 
