--- a/.github/workflows/optimize_crafting.yml
+++ b/.github/workflows/optimize_crafting.yml
@@ -29,7 +29,7 @@ jobs:
           pip install pandas
 
       - name: Generate index.json
-        run: python generate_index_json.py
+        run: python scripts/generate_index_json.py
 
       - name: Run Craft Optimizer
         run: |
